--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
-    <title>React App</title>
+    <title>Shatalov Viktor's contact list</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
